@@ -1,18 +1,17 @@
 Package: tensorsparse
 Type: Package
 Title: Multiway Clustering via Tensor Block Models
-Version: 2.0
-Date: 2020-03-20
+Version: 3.0
+Date: 2020-09-27
 Author: Miaoyan Wang, Yuchen Zeng
 Maintainer: Yuchen Zeng <yzeng58@wisc.edu>
-Imports: fields, glmnet, rgl, reshape, mvtnorm, HDCI, parallel,
-        RColorBrewer, viridis, methods, stats, utils
+Imports: parallel, stats
 Suggests: cluster
 Description: Implements the multiway sparse clustering approach of M. Wang and Y. Zeng, "Multiway clustering via tensor block models". Advances in Neural Information Processing System 32 (NeurIPS), 715-725, 2019.
 License: GPL (>= 2)
 NeedsCompilation: yes
-Packaged: 2020-03-21 20:15:21 UTC; cengyuchen
+Packaged: 2020-09-27 18:27:15 UTC; cengyuchen
 Repository: CRAN
-Date/Publication: 2020-03-22 07:10:02 UTC
+Date/Publication: 2020-09-27 18:40:02 UTC
 RoxygenNote: 7.0.0
 Encoding: UTF-8
