@@ -1,17 +1,17 @@
-efb29e4af5636a3b6815bc016ce964d0 *DESCRIPTION
-24aac22685357239e49f7aeac96fa8ae *NAMESPACE
-e5cfa6fb2aa22bd357cf5f588c279de2 *NEWS
-59dbdae5c9b459c9bf6727a5d9cc3f01 *R/chooseLambda.R
-7a343b165c3bad9658c584a7678b593a *R/choosekrl_bic.R
-dad589da6441af96973c369b44de5ab8 *R/functions.R
-29b3103664a6f554b71fb7477d9c9a61 *R/get_data.R
-8ab01c1d4727fae7d9b6c9afabc5ff2d *R/get_data4.R
-9f2523780ba595e8c9f277aaffdcd904 *R/tbm_clustering.R
+7880d21e49b20f9c9693fddb7125790f *DESCRIPTION
+f1b45a481d23d15b32d644be202bab46 *NAMESPACE
+3e355ac473338b40135f5511ef945eaa *NEWS
+a19eb0c1443f9d8411e23e2b665bed37 *R/chooseClusteringSize.R
+9c9deefc0e75057290e40003035871dd *R/chooseLambda.R
+3111a4139669e3a73c1b800d5ded174d *R/functions.R
+f870cbd003ce8f4ac3ce9eb34fefda67 *R/getOrder3Tensor.R
+3478f2ec823db82e24c2a947a7666d47 *R/getOrder4Tensor.R
+61b8a8d168bf60a06d3d48323ee2aa8e *R/tbmClustering.R
 244f6f7aee55b35027b114ce15319e6b *inst/REFERENCES.bib
-373cc3e2b669c319aa675b6599b01b9e *man/chooseLambda.Rd
-3c9e427b1b35c2de202345d5bd534a68 *man/choosekrl_bic.Rd
-9a3811c838c010d41138ac1721e70422 *man/get_data.Rd
-e6a1c6d22c4a4f485a636853986edecf *man/get_data4.Rd
-69639c97069e9312701e590847090b73 *man/tbm_clustering.Rd
+a5311c85ecb95eb02c36bf2319c97b48 *man/chooseClusteringSize.Rd
+ec8ca8bb42a7acc4105432996c3daa6e *man/chooseLambda.Rd
+3c6a114fccb410356f93ad8621eae61a *man/getOrder3Tensor.Rd
+8418f3ec7548ea0ece1a2a4243f91f8b *man/getOrder4Tensor.Rd
+9cc80d624b3a42a5c36c4819ed4f8778 *man/tbmClustering.Rd
 824edd84b25b1ba5e4bfe0c86277eeb6 *src/adjustedRand.c
 7c22b1b500cab25872924e218f1645f5 *src/registerDynamicSymbol.c
