@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/choosekrl_bic.R
-\name{choosekrl_bic}
-\alias{choosekrl_bic}
-\title{Select the clustering size for sparse tensor clustering via BIC}
+% Please edit documentation in R/chooseClusteringSize.R
+\name{chooseClusteringSize}
+\alias{chooseClusteringSize}
+\title{Select the clustering size for order-3 sparse tensor clustering via BIC}
 \usage{
-choosekrl_bic(
+chooseClusteringSize(
   x,
   k,
   r,
