@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/get_data.R
-\name{get_data}
-\alias{get_data}
+% Please edit documentation in R/getOrder3Tensor.R
+\name{getOrder3Tensor}
+\alias{getOrder3Tensor}
 \title{Generate a random order-3 tensor}
 \usage{
-get_data(
+getOrder3Tensor(
   n,
   p,
   q,
@@ -69,5 +69,5 @@ Generate an order-3 random tensor based on tensor block model.
 }
 \examples{
 
-get_data(20,20,20,2,2,2)$x
+getOrder3Tensor(20,20,20,2,2,2)$x
 }
