@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/get_data4.R
-\name{get_data4}
-\alias{get_data4}
+% Please edit documentation in R/getOrder4Tensor.R
+\name{getOrder4Tensor}
+\alias{getOrder4Tensor}
 \title{Generate a random order-4 tensor}
 \usage{
-get_data4(
+getOrder4Tensor(
   n,
   p,
   q,
@@ -74,4 +74,7 @@ a list
 }
 \description{
 Generate a random order-4 tensor based on tensor block model.
+}
+\examples{
+getOrder4Tensor(10,10,10,10,2,2,2,2)
 }
