@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/tbm_clustering.R
-\name{tbm_clustering}
-\alias{tbm_clustering}
+% Please edit documentation in R/tbmClustering.R
+\name{tbmClustering}
+\alias{tbmClustering}
 \title{Perform tensor clustering via tensor block model (TBM)}
 \usage{
-tbm_clustering(
+tbmClustering(
   x,
   k,
   r,
@@ -65,8 +65,8 @@ a list
 Perform tensor clustering via tensor block model (TBM) method.
 }
 \examples{
-x = get_data(20,20,20,2,2,2)$x
-tbm_clustering(x,2,2,2)
+x = getOrder3Tensor(20,20,20,2,2,2)$x
+tbmClustering(x,2,2,2)
 
 }
 \references{
